# postgrestraining

./: .gitignore  README.md
postgrestraining/: pyproject.toml
postgrestraining/postgrestraining/: file.py
postgrestraining/postgrestraining/.ipynb_checkpoints/: jupyter_postgres_test-checkpoint.ipynb
postgrestraining/postgrestraining/db_config/: configuration.py  db_exceptions.py
postgrestraining/postgrestraining/db_connection/: db.py
postgrestraining/postgrestraining/sql_files/: check_paused_deepscraping.sql
